--- a/src/app/admin/option-group/option-group-list/option-group-list.component.html
+++ b/src/app/admin/option-group/option-group-list/option-group-list.component.html
@@ -9,11 +9,11 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Danh mục</h1>
+            <h1>Nhóm tùy chọn</h1>
           </div>
-          <div class="col-sm-6">
-            <div class="breadcrumb-item float-sm-right mr-50"><button type="button" class="btn btn-block btn-primary btn-lg "> <i class="fas fa-plus"></i>  Thêm danh mục</button></div>
-          </div>
+          <a routerLink="/admin/option-group/create">
+            <div class="breadcrumb-item float-sm-right mr-50"><button type="button" class="btn btn-block btn-primary btn-lg "> <i class="fas fa-plus"></i> Thêm </button></div>
+          </a>
         </div>
       </div><!-- /.container-fluid -->
 
@@ -27,7 +27,7 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">Danh sách các danh mục</h3>
+                <h3 class="card-title">Danh sách nhóm tùy chọn</h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
@@ -35,19 +35,15 @@
                   <thead>
                   <tr class="text-center">
                     <th>STT</th>
-                    <th>Người mua</th>
-                    <th>Tên sản phẩm </th>
-                    <th>Số lượng</th>
-                    <th>Ngày đặt hàng</th>
-                    <th>Trạng thái</th>
+                    <th>Tên</th>
+                    <th>Hành Động</th>
                   </tr>
                   </thead>
                   <tbody class="text-center">
-                  <tr *ngFor="let category of categories;index as i">
+
+                  <tr *ngFor="let product of optionGroupList;index as i">
                     <td>{{i+1}}</td>
-                    <td>{{category.name}}</td>
-                    <td><img src="http://localhost:8080/image/{{category.image}}" alt="" width="50px"></td>
-                    <td>{{category.description}}</td>
+                    <td>{{product.name}}</td>
                     <td><i class="fas fa-trash"></i></td>
                   </tr>
 
@@ -56,8 +52,6 @@
                   <tr>
                     <th>STT</th>
                     <th>Tên</th>
-                    <th>Ảnh</th>
-                    <th>Số lượng</th>
                     <th>Hành Động</th>
                   </tr>
                   </tfoot>
