--- a/src/app/admin/option/option-edit/option-edit.component.html
+++ b/src/app/admin/option/option-edit/option-edit.component.html
@@ -52,8 +52,9 @@
                 <!-- /.card-body -->
 
                 <div class="card-footer col-12 align-content-center">
-                  <button type="submit" class="btn btn-primary mr-50 width-100">Thêm</button>
+                  <button type="submit" class="btn btn-primary mr-50 width-100">Cập nhật</button>
                   <a routerLink="/admin/option/list"><button  class="btn btn-primary width-100">Hủy</button></a>
+
                 </div>
 
 
@@ -78,4 +79,5 @@
   </aside>
   <!-- /.control-sidebar -->
 </div>
+
 
