--- a/src/app/admin/product/prod-list/prod-list.component.html
+++ b/src/app/admin/product/prod-list/prod-list.component.html
@@ -12,7 +12,12 @@
             <h1>Danh sách sản phẩm</h1>
           </div>
           <div class="col-sm-6">
-              <div class="breadcrumb-item float-sm-right mr-50"><button type="button" class="btn btn-block btn-primary btn-lg "> <i class="fas fa-plus"></i>  Thêm sản phẩm</button></div>
+              <div class="breadcrumb-item float-sm-right mr-50">
+                <a href="admin/product/create">
+                <button  type="button" class="btn btn-block btn-primary btn-lg "> <i class="fas fa-plus"></i>  Thêm sản phẩm</button>
+                </a>
+              </div>
+
           </div>
         </div>
       </div><!-- /.container-fluid -->
