--- a/src/app/admin/option-group/option-group-create/option-group-create.component.html
+++ b/src/app/admin/option-group/option-group-create/option-group-create.component.html
@@ -9,7 +9,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Thêm sản phẩm</h1>
+            <h1>Thêm Nhóm</h1>
           </div>
 
         </div>
@@ -27,26 +27,15 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Điền Thông Tin Tùy chọn</h3>
+                <h3 class="card-title">Điền Thông Nhóm</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form [formGroup]="optionForm" (ngSubmit)="submit()">
+              <form [formGroup]="optionGroupForm" (ngSubmit)="submit()">
                 <div class="card-body">
                   <div class="form-group">
-                    <label for="name">1. Tên tùy chọn </label>
+                    <label for="name">1. Tên Nhóm </label>
                     <input type="text" class="form-control" id="name" placeholder="Tên tùy chọn" formControlName="name">
-                  </div>
-                  <div class="form-group">
-                    <label for="price">2. Giá</label>
-                    <input type="text" class="form-control" id="price" placeholder="Nhập Giá sản tùy chọn" formControlName="price">
-                  </div>
-                  <div class="form-group">
-                    <label for="price">3. Nhóm tùy chọn</label>
-                    <select class="form-control select2" style="width: 100%;" formControlName="group">
-                      <option disabled [ngValue]="null"> Lựa chọn Nhóm</option>
-                      <option *ngFor="let optionGroup of optionGroupList" value="{{optionGroup.id}}">{{optionGroup.name}}</option>
-                    </select>
                   </div>
                 </div>
                 <!-- /.card-body -->
