--- a/src/app/admin/share/sidebar/sidebar.component.html
+++ b/src/app/admin/share/sidebar/sidebar.component.html
@@ -1,22 +1,8 @@
-<!-- Preloader -->
-<div class="preloader flex-column justify-content-center align-items-center">
-  <img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
-</div>
+
 
 <!-- Navbar -->
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-  <!-- Left navbar links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-    </li>
-    <li class="nav-item d-none d-sm-inline-block">
-      <a href="index3.html" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item d-none d-sm-inline-block">
-      <a href="#" class="nav-link">Contact</a>
-    </li>
-  </ul>
+
 
   <!-- Right navbar links -->
   <ul class="navbar-nav ml-auto">
@@ -144,20 +130,19 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
-<!--    <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">-->
+  <a href="admin/product/list" class="brand-link text-center">
     <span class="brand-text font-weight-light">New House</span>
   </a>
 
   <!-- Sidebar -->
   <div class="sidebar">
     <!-- Sidebar user panel (optional) -->
-    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex text-center">
       <div class="image">
-<!--        <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">-->
+        <img src="assets/img/core-img/logo_newhouse.jpg" class="" alt="User Image">
       </div>
-      <div class="info">
-        <a href="#" class="d-block">Vũ Văn Tập</a>
+      <div class="info text-center">
+        <a href="#" class="d-block">Admintrator</a>
       </div>
     </div>
 
@@ -179,15 +164,15 @@
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
         <li class="nav-item">
-          <a routerLink="#" class="nav-link">
+          <a routerLink="/admin/product/list" class="nav-link">
             <i class="nav-icon fas fa-edit"></i>
             <p>
-              Danh sách sản phẩm
+               Sản phẩm
             </p>
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a class="nav-link">
             <i class="nav-icon fas fa-table"></i>
             <p>
               Tùy chọn
@@ -196,13 +181,13 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a href="pages/tables/simple.html" class="nav-link">
+              <a routerLink="/admin/option/list" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Danh sách tùy chọn</p>
               </a>
             </li>
             <li class="nav-item">
-              <a href="pages/tables/data.html" class="nav-link">
+              <a routerLink="/admin/option-group/list" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p> Nhóm tùy chọn</p>
               </a>
@@ -210,10 +195,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a routerLink="#" class="nav-link">
+          <a routerLink="/admin/category/list" class="nav-link">
             <i class="nav-icon fas fa-edit"></i>
             <p>
-              Danh sách các Danh mục
+               Danh mục
             </p>
           </a>
         </li>
