--- a/src/app/customer/carts-table/carts-table.component.html
+++ b/src/app/customer/carts-table/carts-table.component.html
@@ -47,7 +47,7 @@
                 <td class="cart_product_desc" style="min-width: 30%;">
                   <h6  >{{cartDetail.dish.name}}</h6>
                   <h6  > Tùy chọn:</h6>
-                  <div *ngFor="let opt of cartDetail.productOption">
+                  <div *ngFor="let opt of cartDetail.options">
                   <h6 >{{opt.name}}</h6>
                   </div>
                 </td>
