--- a/src/app/customer/share/sidebar/sidebar.component.html
+++ b/src/app/customer/share/sidebar/sidebar.component.html
@@ -11,10 +11,10 @@
   <!-- Amado Nav -->
   <nav class="amado-nav">
     <ul>
-      <li ><a href="newhouse">Trang chủ</a></li>
-      <li ><a href="newhouse/shop/0">Sản Phẩm</a></li>
-      <li  ><a href="newhouse/shop">Bán chạy</a></li>
-      <li ><a href="newhouse">Về Công ty</a></li>
+      <li ><a routerLink="/newhouse">Trang chủ</a></li>
+      <li ><a routerLink="/newhouse/shop/0">Sản Phẩm</a></li>
+      <li  ><a routerLink="/newhouse/shop">Bán chạy</a></li>
+      <li ><a routerLink="/newhouse/about">Về Công ty</a></li>
     </ul>
   </nav>
   <!-- Button Group -->
