--- a/src/app/admin/product/product-edit/product-edit.component.html
+++ b/src/app/admin/product/product-edit/product-edit.component.html
@@ -44,13 +44,13 @@
                   <div class="form-group">
                     <label>3. Danh mục</label>
                     <select class="form-control select2" style="width: 100%;" formControlName="categories">
-                    <option disabled [ngValue]="null"> Lựa chọn danh mục</option>
-                    <option *ngFor="let category of categories" value="{{category.id}}">{{category.name}}</option>
+                      <option disabled [ngValue]="null"> Lựa chọn danh mục</option>
+                      <option *ngFor="let category of categories" value="{{category.id}}">{{category.name}}</option>
                     </select>
                   </div>
                   <div class="form-group">
                     <label>4. Tùy chọn</label>
-                    <select multiple class="form-control select2" style="width: 100%;" formControlName="optionGroups">
+                    <select multiple class="form-control select2" style="width: 100%;" formControlName="optionGroup">
                       <option *ngFor="let optionGroup of optionGroupList" value="{{optionGroup.id}}">{{optionGroup.name}}</option>
                     </select>
                   </div>
