--- a/src/app/customer/checkout/checkout.component.html
+++ b/src/app/customer/checkout/checkout.component.html
@@ -1,4 +1,25 @@
 <app-search></app-search>
+<div class="modal fade" id="modal-primary">
+  <div class="modal-dialog">
+    <div class="modal-content bg-primary">
+      <div class="modal-header">
+        <h4 class="modal-title">Primary Modal</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer justify-content-between">
+        <button type="button" class="btn btn-outline-light" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-outline-light">Save changes</button>
+      </div>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
 <!-- ##### Main Content Wrapper Start ##### -->
 <div class="main-content-wrapper d-flex clearfix">
 
@@ -118,6 +139,7 @@
               <div class="cart-btn text-center mt-30">
                 <button  type="submit" class="btn btn-warning w-50">Đặt hàng</button>
               </div>
+
             </form>
           </div>
         </div>
