--- a/src/app/admin/share/sidebar/sidebar.component.html
+++ b/src/app/admin/share/sidebar/sidebar.component.html
@@ -203,7 +203,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="#" class="nav-link">
+          <a routerLink="/admin/order/list" class="nav-link">
             <i class="nav-icon fas fa-edit"></i>
             <p>
               Đơn đặt hàng
