--- a/src/app/customer/share/sidebar/sidebar.component.html
+++ b/src/app/customer/share/sidebar/sidebar.component.html
@@ -29,10 +29,12 @@
   </div>
   <!-- Social Button -->
   <div class="social-info d-flex justify-content-between">
-    <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+    <a href="https://zalo.me/0397312493"><img src="assets/img/core-img/cart.png" alt=""></a>
     <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
   </div>
+
+
 </header>
 <!-- Header Area End -->
