--- a/src/app/admin/categories/category-list/category-list.component.html
+++ b/src/app/admin/categories/category-list/category-list.component.html
@@ -12,7 +12,10 @@
             <h1>Danh mục</h1>
           </div>
           <a routerLink="/admin/category/create">
-            <div class="breadcrumb-item float-sm-right mr-50"><button type="button" class="btn btn-block btn-primary btn-lg "> <i class="fas fa-plus"></i>  Thêm</button></div>
+            <div class="breadcrumb-item float-sm-right mr-50">
+              <button type="button" class="btn btn-block btn-primary btn-lg ">
+                <i class="fas fa-plus"></i>  Thêm</button>
+            </div>
           </a>
         </div>
       </div><!-- /.container-fluid -->
@@ -26,9 +29,6 @@
         <div class="row">
           <div class="col-12">
             <div class="card">
-              <div class="card-header">
-                <h3 class="card-title">Danh sách các danh mục</h3>
-              </div>
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example2" class="table table-bordered table-hover">
