--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -23,7 +23,7 @@
 
       <div class="single-products-catagory clearfix float-left" *ngFor="let category of categories; index as i">
         <a routerLink="/newhouse/shop/{{category.id}}">
-          <img src="{{categories[i].image}}" alt="">
+          <img src="{{imgUrl}}{{categories[i].image}}" alt="">
           <!-- Hover Content -->
           <div class="hover-content">
             <div class="line"></div>
