--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -6,7 +6,7 @@
   <div class="mobile-nav">
     <!-- Navbar Brand -->
     <div class="amado-navbar-brand">
-      <a href="index.html"><img src="assets/img/core-img/logo_newhouse_long.jpg" alt=""></a>
+      <a href="newhouse/home"><img src="assets/img/core-img/logo_newhouse_long.jpg" alt=""></a>
     </div>
     <!-- Navbar Toggler -->
     <div class="amado-navbar-toggler">
@@ -14,28 +14,28 @@
     </div>
   </div>
 
-<app-sidebar></app-sidebar>
+  <app-sidebar></app-sidebar>
   <!-- Product Catagories Area Start -->
-  <div class="products-catagories-area clearfix">
-    <div class="amado-pro-catagory clearfix">
+<!--  <div class="products-catagories-area clearfix">-->
+<!--    <div class="amado-pro-catagory clearfix">-->
 
-      <!-- Single Catagory -->
+<!--      &lt;!&ndash; Single Catagory &ndash;&gt;-->
 
-      <div class="single-products-catagory clearfix float-left" *ngFor="let category of categories; index as i">
-        <a routerLink="/newhouse/shop/{{category.id}}">
-          <img src="{{imgUrl}}{{categories[i].image}}" alt="">
-          <!-- Hover Content -->
-          <div class="hover-content">
-            <div class="line"></div>
-            <p>{{categories[i].name}}</p>
-            <h4>{{categories[i].description}}</h4>
-          </div>
-        </a>
-      </div>
+<!--      <div class="single-products-catagory clearfix float-left" *ngFor="let category of categories; index as i">-->
+<!--        <a routerLink="/newhouse/shop/{{category.id}}">-->
+<!--          <img src="{{imgUrl}}{{categories[i].image}}" alt="">-->
+<!--          &lt;!&ndash; Hover Content &ndash;&gt;-->
+<!--          <div class="hover-content">-->
+<!--            <div class="line"></div>-->
+<!--            <p>{{categories[i].name}}</p>-->
+<!--            <h4>{{categories[i].description}}</h4>-->
+<!--          </div>-->
+<!--        </a>-->
+<!--      </div>-->
 
 
-    </div>
-  </div>
+<!--    </div>-->
+<!--  </div>-->
   <!-- Product Catagories Area End -->
 </div>
 
